hpl-712 dbfiller p1